--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Homework Quiz</h1>
-          <p class="lead">This quiz will ask a serious of 4 random questions for you to answer.  They will be in multiple choice format.</p>
+          <p class="lead">  This quiz will ask a serious of 4 random questions for you to answer.  They will be in multiple choice format.  Score will be kept of all correct and missed answers.  To make it more annoying we have added a timer.</p>
+          <br>
         </div>
       </div>
     <h2 id="quizScore"></h2id></h2>
